--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
+<head>    
     <title>to-do list by Maureen Wang</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400|Pacifico" rel="stylesheet">
+    <meta charset="utf-8">
 </head>
 <body>
-    <div class="appContainer">
-
-    </div>
+    <div class="appContainer"></div>
 </body>
 </html>
