--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>    
-    <title>puzzle shuffle by Maureen Wang</title>
+    <title>to-do list by Maureen Wang</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400|Pacifico" rel="stylesheet">
     <meta charset="utf-8">
 </head>
